// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaCricketScorecard should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa laZDmH"
  >
    <div
      class="sc-htpNat sc-bxivhb cDDLep"
    />
    <div
      class="sc-bwzfXH iCdzAV"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaCricketScorecard should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa Ssmqo"
  >
    <div
      class="sc-htpNat sc-bxivhb cDDLep"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
